--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,4 +1,4 @@
-{% extends "base_dashboard.html" %}
+{% extends 'base_dashboard.html' %}
 
 {% block browser_title %}Home{% endblock browser_title %}
 
