--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -8,6 +8,7 @@
 {% block page_title %}<i class="icon-book"></i> Holdings <small><a href="#modalAddHolding" role="button" data-toggle="modal">add</a></small>{% endblock page_title %}
 
 {% block content %}
+
 <table id="holdings" class="table table-striped table-striped-white table-hover table-bordered table-clickable table-options">
   <thead>
     <tr>
@@ -26,7 +27,7 @@
     {% for holding in holdings %}
     <tr>
       <td>
-        <a class="large" href="{% url 'transactions_index' portfolio.id holding.id %}">{{ holding.stock_symbol }}:{{ holding.market_code }}</a><br />
+        <a class="large" href="{% url 'portfolio_holding_show' holding.portfolio_id holding.id %}">{{ holding.stock_symbol }}:{{ holding.market_code }}</a><br />
         {{ holding.stock_name }}
       </td>
       <td class="align-right"><span class="medium">
@@ -87,7 +88,7 @@
 {% endif %}
 
 <div id="modalAddHolding" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="createHoldingModalLabel" aria-hidden="true">
-  <form method="post" action="{% url "holding_create" portfolio.id %}">
+  <form method="post" action="{# url 'holding_create' portfolio.id #}">
     {% csrf_token %}
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
