added ability to view list of api auth tokens and delete single api auth token

--- a/templates/admin/api/show.html
+++ b/templates/admin/api/show.html
@@ -1,11 +1,11 @@
 {% extends "base_one_column.html" %}
 {% load endless %}
 
-{% block browser_title %}Api Logs - Admin{% endblock browser_title %}
+{% block browser_title %}API Logs - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; <a href="{%url 'admin_api_log_index' %}">Api Logs</a>  &rarr; {{ api_log.request_id }}{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; <a href="{%url 'admin_api_log_index' %}">API Logs</a>  &rarr; {{ api_log.request_id }}{% endblock breadcrumbs %}
 
-{% block page_title %}Api Logs{% endblock page_title %}
+{% block page_title %}API Log Entry{% endblock page_title %}
 
 {% block content %}
 
