--- a/templates/common/navigation_main.html
+++ b/templates/common/navigation_main.html
@@ -11,7 +11,7 @@
 </ul>
 {% if user.is_admin %}
 <ul class="nav pull-right">
-  <li class="dropdown {% navactive request "admin_home_index admin_stock_index admin_api_log_index admin_api_log_show admin_stock_edit admin_market_index admin_profile_index admin_profile_edit" %}">
+  <li class="dropdown {% navactive request "admin_home_index admin_stock_index admin_api_log_index admin_api_log_show admin_api_token_index admin_stock_edit admin_market_index admin_profile_index admin_profile_edit" %}">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
     <ul class="dropdown-menu pull-right">
       <li><a role="menuitem" tabindex="-1" href="{% url 'portfolioapp.apps.admin.views.home_index' %}">Dashboard</a></li>
@@ -20,6 +20,7 @@
       <li><a href="{% url 'portfolioapp.apps.admin.views.market_index' %}">Markets</a></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.profile_index' %}">Users</a></li>
       <li><a href="{% url 'portfolioapp.apps.admin.views.api_log_index' %}">API Logs</a></li>
+      <li><a href="{% url 'portfolioapp.apps.admin.views.api_token_index' %}">API Tokens</a></li>
     </ul>
   </li>
 </ul>
