--- a/templates/admin/api/show.html
+++ b/templates/admin/api/show.html
@@ -46,7 +46,7 @@
       <div class="control-group">
         <label class="control-label" for="tbRequestUser">Request User:</label>
         <div class="controls">
-          <input id="tbRequestUser" type="text" value="{{ api_log.user_id }}" class="input-xlarge">
+          <input id="tbRequestUser" type="text" value="{{ api_log.user.full_name }}" class="input-xlarge">
         </div>
       </div>
       <div class="control-group">
