--- a/templates/portfolios/holdings/show.html
+++ b/templates/portfolios/holdings/show.html
@@ -8,12 +8,49 @@
 {% block page_title %}<i class="icon-book"></i> Holding{% endblock page_title %}
 
 {% block content %}
-<p>This is the show page for {{ holding.full_name }}</p>
+<div class="stock-header clearfix">
+  <div style="float: left;">
+    <span class="stock-name">{{ holding.stock.name }}</span> <span class="stock-symbol">({{ holding.stock.symbol }}:{{ holding.stock.market.acr }})</span> <span class="stock-current-price">$15.43</span> <span class="stock-currency">CAD</span> <span class="stock-something">-$0.1200 (-0.77%)</span>
+  </div>
+  {% if holding_transaction_count > 0 %}
+    <div style="float: right;">
+      <p><a href="{% url 'transactions_index' holding.portfolio.id holding.id %}">View Transactions</a></p>
+    </div>
+  {% endif %}
+</div>
 
-{% if holding_transaction_count > 0 %}
-<p><a href="{% url 'transactions_index' holding.portfolio.id holding.id %}">View transactions</a></p>
-{% else %}
-<p>No transactions</p>
-{% endif %}
+<h4>Fundamentals</h4>
 
 {% endblock content %}
+
+{% block sidebar %}
+
+<div class="widget widget-simple">
+  <div class="widget-header">
+    <h3>Holding Snapshot</h3>
+  </div>
+  <div class="widget-body">
+    <ul>
+      <li>Shares: 100.0000</li>
+      <li>Book Value: $1000.22</li>
+      <li>Last Price: $14.32</li>
+      <li>Market Value: $14.32</li>
+    </ul>
+  </div>
+</div>
+
+<div class="widget widget-simple">
+  <div class="widget-header">
+    <h3>Key Statistics</h3>
+  </div>
+  <div class="widget-body">
+    <ul>
+      <li>Item 1: 10</li>
+      <li>Item 2: 20</li>
+      <li>Item 3: 30</li>
+      <li>Item 4: 40</li>
+    </ul>
+  </div>
+</div>
+
+{% endblock sidebar %}
