--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -549,6 +549,7 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table tr td .medium { font-size: 14px; font-weight: bold; }
 .table tr td .small { font-size: 12px; }
 
+
 /********************************/
 /* AUTHENTICATION (SIGN IN, SIGN OUT)
 /********************************/
@@ -655,6 +656,76 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   -webkit-font-smoothing: antialiased;
 }
 
+
+/********************************/
+/* TWITTER TYPEAHEAD (stocks)
+/********************************/
+
+.typeahead,
+.tt-query,
+.tt-hint {
+  width: 540px;
+  height: 30px;
+  padding: 8px 12px;
+  font-size: 24px;
+  line-height: 30px;
+  border: 2px solid #ccc;
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  outline: none;
+}
+
+.typeahead {
+  background-color: #fff;
+}
+
+.typeahead:focus {
+  border: 2px solid #0097cf;
+}
+
+.tt-query {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.tt-hint {
+  width: 530px;
+  color: #999
+}
+
+.tt-dropdown-menu {
+  width: 540px;
+  margin-top: 12px;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.tt-suggestion {
+  padding: 3px 20px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.tt-suggestion.tt-is-under-cursor {
+  color: #fff;
+  background-color: #0097cf;
+}
+
+.tt-suggestion p {
+  margin: 0;
+}
+
+
 /********************************/
 /* JQUERY-UI
 /********************************/
@@ -674,11 +745,9 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   line-height: 20px;
 }
 
+
 /********************************/
 /* FOOTER
 /********************************/
 
 footer { font-size: 11px; }
-
-.tt-hint { width: 530px; }
-.tt-dropdown-menu { width: 540px; }
