--- a/templates/markets/stocks/index.html
+++ b/templates/markets/stocks/index.html
@@ -31,15 +31,21 @@
 {% endblock sidebar %}
 
 {% block script %}
+  <script src="{{ STATIC_URL }}js/twitter-hogan/hogan-2.0.0.min.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}js/twitter-typeahead/typeahead.min.js" type="text/javascript"></script>
+
+  {% verbatim %}
   <script type="text/javascript">
       $(document).ready(function(){
           $('.typeahead').typeahead({
               name: 'stocks',
-              remote: '/api/markets/stocks2?q=%QUERY'
+              remote: '/api/markets/stocks2?q=%QUERY',
+              template: '<p><strong>{{ name }}</strong> ({{ symbol }}:{{ acr }})<br /><small>Last price: ${{ last_price }}</small></p>',
+              engine: Hogan
           });
       });
   </script>
+  {% endverbatim %}
 
   {% include "common/list_pagination_script.html" %}
 {% endblock script %}
