better separation of templates for auth and unauth'd views (such as home page and other 'static' files

--- a/templates/admin/api/token_show.html
+++ b/templates/admin/api/token_show.html
@@ -1,4 +1,5 @@
-{% extends "base_one_column.html" %}
+{% extends 'base_app_one_column.html' %}
+
 {% load endless %}
 
 {% block browser_title %}API Authentication Token - Admin{% endblock browser_title %}
