--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends 'base_app_two_columns.html' %}
 
 {% block browser_title %}Home - Admin{% endblock browser_title %}
 
