--- a/templates/admin/markets/stocks/edit.html
+++ b/templates/admin/markets/stocks/edit.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 {% load endless %}
 
 {% block browser_title %}Edit Stock - Admin{% endblock browser_title %}
