--- a/templates/admin/profiles/index.html
+++ b/templates/admin/profiles/index.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 {% load humanize %}
 
 {% block browser_title %}Users - Admin{% endblock browser_title %}
