--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -1,9 +1,10 @@
-{% extends 'base_two_columns.html' %}
+{% extends 'base_app_two_columns.html' %}
+
 {% load humanize %}
 
 {% block browser_title %}Portfolios{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; Portfolios{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Portfolios{% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-folder-open-alt"></i> Portfolios <small><a href="#modalCreate" role="button" data-toggle="modal">add</a> </small>{% endblock page_title %}
 
