--- a/templates/admin/api/index.html
+++ b/templates/admin/api/index.html
@@ -1,4 +1,5 @@
-{% extends "base_one_column.html" %}
+{% extends 'base_app_one_column.html' %}
+
 {% load endless %}
 
 {% block browser_title %}API Logs - Admin{% endblock browser_title %}
