--- a/templates/admin/markets/markets/index.html
+++ b/templates/admin/markets/markets/index.html
@@ -1,7 +1,9 @@
-{% extends "base_two_columns.html" %}
+{% extends 'base_app_two_columns.html' %}
 {% load humanize %}
 
 {% block browser_title %}Markets - Admin{% endblock browser_title %}
+
+{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Markets{% endblock breadcrumbs %}
 
 {% block page_title %}Markets{% endblock page_title %}
 
