--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 {% load endless %}
 
 {% block browser_title %}Stocks - Admin{% endblock browser_title %}
