--- a/templates/admin/profiles/edit.html
+++ b/templates/admin/profiles/edit.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 
 {% block browser_title %}Edit User{% endblock browser_title %}
 
