--- a/templates/dev/api_console.html
+++ b/templates/dev/api_console.html
@@ -1,4 +1,4 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 
 {% block browser_title %}API Console{% endblock browser_title %}
 
