--- a/templates/portfolios/holdings/show.html
+++ b/templates/portfolios/holdings/show.html
@@ -1,9 +1,9 @@
-{% extends "base_two_columns.html" %}
+{% extends "base_app_two_columns.html" %}
 {% load humanize %}
 
 {% block browser_title %}Holdings{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolios_index' %}">Portfolios</a> &rarr; <a href="{% url 'portfolio_holdings_index' holding.portfolio.id %}">{{ holding.portfolio.name }}</a> &rarr; {{ holding.full_name }}{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'portfolios_index' %}">Portfolios</a> &rarr; <a href="{% url 'portfolio_holdings_index' holding.portfolio.id %}">{{ holding.portfolio.name }}</a> &rarr; {{ holding.full_name }}{% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-book"></i> Holding{% endblock page_title %}
 
