--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -1,40 +1,42 @@
-{% extends "base_unauthenticated_profile.html" %}
+{% extends 'base_static_one_column.html' %}
 
 {% block browser_title %}Sign in{% endblock browser_title %}
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Sign in{% endblock breadcrumbs %}
 
 {% block content %}
-<div class="auth-container">
-  {% if form.errors %}
-  <div class="alert alert-error">
-    <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong>Whoops!</strong> Your email address and password didn't match. Please try again.
-  </div>
-  {% endif %}
-
-  <h1>PortfolioApp</h1>
-  <div class="widget-auth">
-    <h3>Sign in below</h3>
-    <form method="post" action="{% url 'profile_signin' %}">
-      {% csrf_token %}
-      <ul>
-        <li><input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" placeholder="email" class="input-block-level"></li>
-        <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
-      </ul>
-      <div class="remember-me">
-        <label for="remember_me">Remember me</label> <input type="checkbox" id="remember_me" name="remember_me">
+  <div class="authentication">
+    <div class="auth-container">
+      {% if form.errors %}
+      <div class="alert alert-error">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <strong>Whoops!</strong> Your email address and password didn't match. Please try again.
       </div>
-      <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
-    </form>
+      {% endif %}
+
+      <h1>PortfolioApp</h1>
+      <div class="widget-auth">
+        <h3>Sign in below</h3>
+        <form method="post" action="{% url 'profile_signin' %}">
+          {% csrf_token %}
+          <ul>
+            <li><input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" placeholder="email" class="input-block-level"></li>
+            <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
+          </ul>
+          <div class="remember-me">
+            <label for="remember_me">Remember me</label> <input type="checkbox" id="remember_me" name="remember_me">
+          </div>
+          <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
+        </form>
+      </div>
+    </div>
   </div>
-</div>
 {% endblock content %}
 
 {% block script %}
-<script type="text/javascript">
-    $(document).ready(function(){
-        $('#id_email').focus();
-    });
-</script>
+  <script type="text/javascript">
+      $(document).ready(function(){
+          $('#id_email').focus();
+      });
+  </script>
 {% endblock script %}
