--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -1,4 +1,5 @@
-{% extends "base_app_two_columns.html" %}
+{% extends 'base_app_two_columns.html' %}
+
 {% load humanize %}
 
 {% block browser_title %}Holdings{% endblock browser_title %}
@@ -88,7 +89,7 @@
 {% endif %}
 
 <div id="modalAddHolding" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="createHoldingModalLabel" aria-hidden="true">
-  <form method="post" action="{# url 'holding_create' portfolio.id #}">
+  <form method="post" action="{% url 'holding_create' portfolio.id %}">
     {% csrf_token %}
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
