fixed bug where fixed to floating header didn't play nice with the new template separation, jumping ensued when the breadcrumb bar was just peaking or not present at all

--- a/templates/base_static.html
+++ b/templates/base_static.html
@@ -6,6 +6,10 @@
   </ul>
 {% endblock main_navigation %}
 
-{% block page_title_base %}{% endblock page_title_base %}
+{% block page_title_base %}
+
+  <header id="bottom"></header>
+
+{% endblock page_title_base %}
 
 {% block content_base %}{% block content_parent %}{% endblock content_parent %}{% endblock content_base %}
