--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -2,7 +2,7 @@
 
 {% block browser_title %}Home - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; Admin{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Admin{% endblock breadcrumbs %}
 
 {% block page_title %}Admin{% endblock page_title %}
 
