--- a/templates/admin/profiles/index.html
+++ b/templates/admin/profiles/index.html
@@ -3,7 +3,7 @@
 
 {% block browser_title %}Users - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Users{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; Users{% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-group"></i> Users{% endblock page_title %}
 
