--- a/templates/common/navigation_main.html
+++ b/templates/common/navigation_main.html
@@ -2,12 +2,12 @@
 
 <ul class="nav">
   {% if user.is_authenticated %}
-  <li class="{% navactive request 'home_index' %}"><a href="{% url 'home_index' %}">Dashboard</a></li>
+  <li class="{% navactive request 'site_index' %}"><a href="{% url 'site_index' %}">Dashboard</a></li>
   <li class="{% navactive request 'market_stock_index' %}"><a href="{% url 'market_stock_index' %}">Stocks</a></li>
   <li class="{% navactive request 'portfolios_index portfolio_create portfolio_holdings_index portfolio_holding_show transactions_index' %}"><a href="{% url 'portfolios_index' %}">Portfolios</a></li>
   <li class="{% navactive request 'activity_index' %}"><a href="{% url 'activity_index' %}">Activity</a></li>
   {% else %}
-  <li class=""><a href="/">Home</a></li>
+  <li class="{% navactive request 'site_index' %}"><a href="{% url 'site_index' %}">Home</a></li>
   {% endif %}
 </ul>
 {% if user.is_admin %}
