--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -2,7 +2,7 @@
 
 {% block browser_title %}Edit Profile{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; Profile{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; Profile{% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-user"></i> Edit Profile{% endblock page_title %}
 
