--- a/templates/admin/api/index.html
+++ b/templates/admin/api/index.html
@@ -4,7 +4,7 @@
 
 {% block browser_title %}API Logs - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; API Logs{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; API Logs{% endblock breadcrumbs %}
 
 {% block page_title %}API Logs{% endblock page_title %}
 
