--- a/templates/admin/api/token_index.html
+++ b/templates/admin/api/token_index.html
@@ -4,7 +4,7 @@
 
 {% block browser_title %}API Authentication Tokens - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; API Authentication Tokens{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; API Authentication Tokens{% endblock breadcrumbs %}
 
 {% block page_title %}API Authentication Tokens{% endblock page_title %}
 
