--- a/templates/admin/api/token_show.html
+++ b/templates/admin/api/token_show.html
@@ -4,7 +4,7 @@
 
 {% block browser_title %}API Authentication Token - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; <a href="{%url 'admin_api_token_index' %}">API Authentication Tokens</a>  &rarr; {{ api_token.date_created }}{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; <a href="{%url 'admin_api_token_index' %}">API Authentication Tokens</a>  &rarr; {{ api_token.date_created }}{% endblock breadcrumbs %}
 
 {% block page_title %}API Authentication Token Entry{% endblock page_title %}
 
