--- a/templates/admin/markets/markets/index.html
+++ b/templates/admin/markets/markets/index.html
@@ -3,7 +3,7 @@
 
 {% block browser_title %}Markets - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Markets{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; Markets{% endblock breadcrumbs %}
 
 {% block page_title %}Markets{% endblock page_title %}
 
