--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -3,7 +3,7 @@
 
 {% block browser_title %}Stocks - Admin{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Stocks{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; Stocks{% endblock breadcrumbs %}
 
 {% block page_title %}Stocks{% endblock page_title %}
 
