--- a/templates/admin/profiles/edit.html
+++ b/templates/admin/profiles/edit.html
@@ -2,7 +2,7 @@
 
 {% block browser_title %}Edit User{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; <a href="{% url "admin_profile_index" %}">Users</a> &rarr; Edit User{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'admin_home_index' %}">Admin</a> &rarr; <a href="{% url "admin_profile_index" %}">Users</a> &rarr; Edit User{% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-user"></i> Edit User{% endblock page_title %}
 
