--- a/templates/markets/stocks/show.html
+++ b/templates/markets/stocks/show.html
@@ -14,6 +14,9 @@
     <div style="float: left;">
       <span class="stock-name">{{ stock.name }}</span> <span class="stock-symbol">({{ stock.symbol }}:{{ stock.market.acr }})</span> <span class="stock-current-price">$15.43</span> <span class="stock-currency">CAD</span> <span class="stock-something">-$0.1200 (-0.77%)</span>
     </div>
+    <div style="float: right;">
+      <p><a href="{% url 'markets_stocks_historical_prices_index' stock.id %}">View Historical Prices</a></p>
+    </div>
   </div>
 
   <h4>Fundamentals</h4>
