--- a/templates/markets/stocks/show.html
+++ b/templates/markets/stocks/show.html
@@ -4,7 +4,7 @@
 
 {% block browser_title %}Stocks{% endblock browser_title %}
 
-{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'markets_stocks_index' %}">Stocks</a> &rarr; {{ stock.name }}{% endblock breadcrumbs %}
+{% block breadcrumbs %}<a href="/">Dashboard</a> &rarr; <a href="{% url 'markets_stocks_index' %}">Stocks</a> &rarr; {{ stock.name }} ({{ stock.symbol }}:{{ stock.market.acr }}){% endblock breadcrumbs %}
 
 {% block page_title %}<i class="icon-book"></i> Stocks{% endblock page_title %}
 
