--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -179,7 +179,7 @@
       <h3>Portfolio Makeup</h3>
     </div>
     <div class="widget-body">
-      <div id="holdings-chart" style="height: 260px;"></div>
+      <div id="holdings-chart" style="`height: 260px;"></div>
     </div>
   </div>
 
